Add font & tailwind config & hero section

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Poller+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  width: 100%;
+  height: 100%;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+:root {
+  --font-poller-one: 'Poller One', serif;
+  --font-alef: 'Alef', serif;
+}
+.navbar-custom {
+  background-color: #1b1b1b;
+  background-color: rgba(27, 27, 27, 0.7); /* with opacity */
+  color: #ffffff; /* white text color */
+}
+.nav-current {
+  font-size: 28px !important;
+  line-height: 24px !important;
+}
+.hover-text-yellow:hover {
+  color: #FFE176 !important;
+}
+.text-stroke {
+  -webkit-text-stroke: 3px black; /* For Webkit browsers */
+  /* text-stroke: 2px black; Standard property */
 }
