--- a/app/globals.css
+++ b/app/globals.css
@@ -1,35 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Poller+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Poller+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+:root { --font-poller-one: "Poller One", serif; --font-alef: "Alef", serif; }
+.material-symbols-outlined { font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24; font-family: "Material Symbols Outlined", sans-serif; }
+
+* { margin: 0; padding: 0; box-sizing: border-box; }
 html,
-body {
-  width: 100%;
-  height: 100%;
-}
-:root {
-  --font-poller-one: 'Poller One', serif;
-  --font-alef: 'Alef', serif;
-}
-.navbar-custom {
-  background-color: #1b1b1b;
-  background-color: rgba(27, 27, 27, 0.7); /* with opacity */
-  color: #ffffff; /* white text color */
-}
-.nav-current {
-  font-size: 28px !important;
-  line-height: 24px !important;
-}
-.hover-text-yellow:hover {
-  color: #FFE176 !important;
-}
-.text-stroke {
-  -webkit-text-stroke: 3px black; /* For Webkit browsers */
-  /* text-stroke: 2px black; Standard property */
-}
+body { width: 100%; height: 100%; font-family: var(--font-alef) }
+.navbar-custom { background-color: #1b1b1b; background-color: rgba(27, 27, 27, 0.7);
+  color: #ffffff; }
+.nav-current { font-size: 28px !important; line-height: 24px !important; }
+.hover-text-yellow:hover { color: #ffe176 !important; }
+.text-stroke { -webkit-text-stroke: 3px black; }
